--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -71,8 +71,10 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=judiciary&">Roles / access - Rellocate</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real?usertype=judiciary&">Roles / access - Rellocate role</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real-chk?usertype=judiciary&">Roles / access - Rellocate role - check changes</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-re?usertype=judiciary&">Roles / access - Rellocate - rellocated</a><br></p>
-
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-re?usertype=judiciary&">Roles / access - Rellocate role - complete</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=judiciary&">Roles / access - Remove allocation</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=judiciary&">Roles / access - Remove allocation</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra-de?usertype=judiciary&">Roles / access - Removed allocation - complete</a><br></p>
 
 
 
