--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajchk-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajchk-fpj.html
@@ -12,7 +12,7 @@ Case details
 {% endblock %}
 {% block content %}
 <h2 class="govuk-heading-l">Allocate a judicial role</h2>
-<h2 class="govuk-heading-m">Personal details</h2>
+<h2 class="govuk-heading-m">Check your allocation</h2>
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
@@ -25,7 +25,7 @@ Case details
               Hearing judge
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-aj">
+              <a class="govuk-link" href="wa-PA-00467-2017-aj-fpj">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -38,7 +38,7 @@ Case details
             Allocate to another judge
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajh">
+              <a class="govuk-link" href="wa-PA-00467-2017-ajh-fpj">
                 Change<span class="govuk-visually-hidden">Selected judge</span>
               </a>
             </dd>
@@ -49,11 +49,39 @@ Case details
               Selected judge
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">Judge Nordman</p>
-              <p class="govuk-body">judge.nordman@example.com</p>
+              <p class="govuk-body">Judge Goodwin</p>
+              <p class="govuk-body">judge.goodwin@example.com</p>
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajha">
+              <a class="govuk-link" href="wa-PA-00467-2017-ajha-fpj">
+                Change<span class="govuk-visually-hidden"> contact details</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Access and role starts
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">DD/MM/YYYY</p>
+
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="wa-PA-00467-2017-ajhadur-fpj">
+                Change<span class="govuk-visually-hidden"> contact details</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Access and role ends
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">DD/MM/YYYY</p>
+
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="wa-PA-00467-2017-ajhadur-fpj">
                 Change<span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
@@ -63,12 +91,12 @@ Case details
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Confirm allocation",
-href: "wa-PA-00467-2017-arj",
+href: "wa-PA-00467-2017-arj-fpj",
 
     classes: "govuk-!-margin-right-3"
   }) }}
 
-  <p><a class="govuk-body" href="wa-PA-00467-2017-ar">Cancel</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-ar-fpj">Cancel</a></p>
 </div>
 </form>
 
