--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -63,10 +63,10 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-t?usertype=judiciary&">Active tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access - Allocate a role</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj?usertype=judiciary&">Roles / access - Allocate a judicial role</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Allocate to another judge</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Allocate to another judge - Check details</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj?usertype=judiciary&">Roles / access - Allocate a judicial role - Choose a role</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... </a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Check details</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=judiciary&">Roles / access - Rellocate</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real?usertype=judiciary&">Roles / access - Rellocate role</a><br></p>
@@ -76,7 +76,27 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=judiciary&">Roles / access - Remove allocation</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra-de?usertype=judiciary&">Roles / access - Removed allocation - complete</a><br></p>
 
+        <!-- SECTION BREAK -->
 
+        <h2 class="govuk-heading-l">Role already exists</h2>
+        <div class="xui-alert-link__number">5 </div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err?usertype=judiciary&">Allocate judicial role - error</a><br></p>
+
+        <!-- SECTION BREAK -->
+
+        <h2 class="govuk-heading-l">Add a fee-paid judge (IAC)</h2>
+        <div class="xui-alert-link__number">6 </div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=judiciary&">Roles / access - Allocate a role (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Choose a role (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br></p>
+
+        <!-- SECTION BREAK -->
 
       </div>
     </div>
