content fixes for dan on case search

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -90,8 +90,8 @@ Case details
         <div class="govuk-details__text">
             You can use the following to help you search for a case:
             <ul>
-                <li>A question mark (‘?’) searches for a single missing or unknown character, for example ‘J?hn Smith’</li>
-                <li>An asterisk (‘*’) searches one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
+                <li>a question mark (‘?’) searches for a single missing or unknown character, for example ‘J?hn Smith’</li>
+                <li>an asterisk (‘*’) searches one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
             </ul>
 
         </div>
@@ -144,7 +144,7 @@ Case details
                         Other reference
                     </label>
                     <div id="otherref-hint" class="govuk-hint">
-                        For example: Caseman, Familyman, solicitor's reference or National Insurance number
+                        For example: Caseman, Familyman, solicitor's reference or National Insurance number.
                     </div>
                     <input class="govuk-input govuk-input--width-10" id="otherref" name="otherref" type="text" spellcheck="false"  value="{{ data.otherref }}">
                 </div>
@@ -157,7 +157,7 @@ Case details
                         Full name
                     </label>
                     <div id="names-hint" class="govuk-hint">
-                        For example: name of a party or solicitor
+                        For example: name of a party or solicitor.
                     </div>
                     <input class="govuk-input govuk-input--width-20" id="names" name="names" type="text" spellcheck="false"  value="{{ data.names }}">
                 </div>
@@ -223,7 +223,7 @@ Case details
                     <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                             <h3 class="govuk-fieldset__heading">
-                                Key date
+                                Date
                             </h3>
                         </legend>
                         <div id="passport-issued-hint" class="govuk-hint">
