--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -96,7 +96,35 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br></p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br></p>
 
-        <!-- SECTION BREAK -->
+  <!-- SECTION BREAK -->
+
+  <h2 class="govuk-heading-l">Add an exclusion</h2>
+  <div class="xui-alert-link__number">7 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access</a><br></p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=judiciary&">Roles / access - Add an exclusion - Choose a role</a><br></p>
+
+<!-- SECTION BREAK -->
+
+<h2 class="govuk-heading-l">My cases</h2>
+<div class="xui-alert-link__number">8 </div>
+<div class="govuk-!-padding-bottom-6"></div>
+<p><a target="_blank" href="/workallocation/pages/wa-mycases-new?usertype=judiciary&">My cases - new case alert</a><br></p>
+<p><a target="_blank" href="/workallocation/pages/wa-mycases-new-o?usertype=judiciary&">My cases - new case alert - options</a><br></p>
+<p><a target="_blank" href="/workallocation/pages/wa-1549?usertype=judiciary&">Case details</a><br></p>
+<p><a target="_blank" href="/workallocation/pages/wa-mycases-new-v?usertype=judiciary&">My cases - new case - viewed</a><br></p>
+
+
+<!-- SECTION BREAK -->
+
+<h2 class="govuk-heading-l">My access</h2>
+<div class="xui-alert-link__number">9 </div>
+<div class="govuk-!-padding-bottom-6"></div>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=judiciary&">My access - tab - New case alert - Pending</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab - pending - viewed</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=judiciary&">My access - tab - New case alert - Rejected</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=judiciary&">My access - tab - View rejection details</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br></p>
 
       </div>
     </div>
