--- a/app/views/workallocation/pages/wa-PA-00467-2017-ar.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ar.html
@@ -164,7 +164,7 @@ Case details
             </dd>
           </div>
         </dl>
-        <p><a href="#" class="govuk-link">Add</a></p>
+        <p><a href="wa-PA-00467-2017-coi" class="govuk-link">Add</a></p>
 <!--
         <form action="#">
           <div class="govuk-button-group">
