--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjp-o.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjp-o.html
@@ -130,7 +130,7 @@ Case details
 
             <tr class="govuk-table__row">
 
-              <td colspan="7" class="right"> <a href="wa-PA-00467-2017-real" class="right">Reallocate</a> <a href="wa-PA-00467-2017-arjra" class="right_tl">Remove allocation</a></td>
+              <td colspan="7" class="right"> <a href="wa-PA-00467-2017-real" class="right">Reallocate</a> <a href="wa-PA-00467-2017-arjra" class="right">Remove allocation</a></td>
             </tr>
         </tbody>
     </table>
