--- a/app/views/workallocation/pages/wa-mycases-new-o.html
+++ b/app/views/workallocation/pages/wa-mycases-new-o.html
@@ -22,29 +22,29 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             Available tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mycases">
-            My cases
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="#">
+            My cases<span class="xui-alert-link__number">1 </span>
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-myaccess">
+          <a class="hmcts-sub-navigation__link" href="#">
             My access
           </a>
         </li>
       </ul>
     </nav>
   </div>
-  <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
+  <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> cases </p>
   <table class="govuk-table ">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
@@ -60,6 +60,24 @@ My work
       </tr>
     </thead>
     <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-1549"><strong>Enndermen Wise</strong></a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
+        <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Lead Judge</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> </td>
+        <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
+        <td class="govuk-table__cell"><a href="wa-mycases-new" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+
+        <td colspan="7" class="right"> <a href="#" class="right">Reallocate</a> <a href="#" class="right">Remove allocation</a></td>
+      </tr>
+
+
       <tr class="govuk-table__row">
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
