--- a/app/views/caseaccess/pages/myaccess-tcr.html
+++ b/app/views/caseaccess/pages/myaccess-tcr.html
@@ -52,7 +52,7 @@ My work
                 <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
                 <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 120px;" aria-sort="none"><a href="#"></a></th>
@@ -65,10 +65,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Rejected</strong></td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>No access</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">View details</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="myaccess-tcrvd" class="right_m">Review</a></td>
 
 
                   </tr>
