--- a/app/views/workallocation/pages/wa-myaccess-tcrvd.html
+++ b/app/views/workallocation/pages/wa-myaccess-tcrvd.html
@@ -8,7 +8,7 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="/caseaccess/pages/myaccess-tcrr" class="govuk-back-link">Back</a>
+<a href="wa-myaccess-new-re-v" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 
@@ -107,15 +107,15 @@ Case details
 <!--
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Role requested</th>
-                <td class="govuk-table__cell">(I think this this covered by Purpose)</td>
+                <td class="govuk-table__cell">(I think this this covered by Reason)</td>
               </tr> -->
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
                 <td class="govuk-table__cell">DD/MM/YYYY </td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request for access</th>
-                <td class="govuk-table__cell">Purpose A (Example: Reviewer)<br>I need to gain access to support the case I'm deciding.</td>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
+                <td class="govuk-table__cell">Reason A (Example: Reviewer)<br>I need to gain access to support the case I'm deciding.</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Access decision</th>
