--- a/app/views/workallocation/pages/wa-mycases-new-v.html
+++ b/app/views/workallocation/pages/wa-mycases-new-v.html
@@ -22,29 +22,29 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             Available tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mycases">
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="#">
             My cases
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-myaccess">
+          <a class="hmcts-sub-navigation__link" href="#">
             My access
           </a>
         </li>
       </ul>
     </nav>
   </div>
-  <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
+  <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> cases </p>
   <table class="govuk-table ">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
@@ -60,6 +60,17 @@ My work
       </tr>
     </thead>
     <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-1549">Enndermen Wise</a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+        <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> </td>
+        <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
+        <td class="govuk-table__cell"><a href="wa-mycases-new-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+      </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
@@ -82,28 +93,7 @@ My work
         <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
         <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
       </tr>
-      <!--    <tr class="govuk-table__row">
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mr Peter Williams Vs Mrs Janet Richards</a></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Adoption</td>
 
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
-
-                      <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
-                  </tr>
-                  <tr class="govuk-table__row">
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mrs Mary Hunter-bridge Vs Mrs Caroline Manning</a></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Care and supervision</td>
-
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021 </td>
-
-                      <td class="govuk-table__cell"><a href="#" class="right_m">Go to case</a></td>
-                  </tr> -->
     </tbody>
   </table>
   {% endblock %}
