updates to case search for dpm review

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -14,7 +14,32 @@
         </h1>
 
 
-        <div style="display: flex; margin-top: 80px;">
+        <h2 class="govuk-heading-m">User testing - 31 March 2021</h2>
+        <div style="display: flex; margin-top: 10px;">
+
+            <div style="width: 300px;">
+
+                <h2 class="govuk-heading-s">Immigration and Asylum</h2>
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Search cases</a></p>
+
+                <p><a  href="/searchcases/pages/noresults.html">No results</a></p>
+                <p><a  href="/searchcases/pages/results?&usertype=staff&results=one&">One results</a></p>
+                <p><a  href="/searchcases/pages/results?usertype=staff&results=three&">Three results</a></p>
+                <p><a  href="/searchcases/pages/results?usertype=staff&results=many&">140 results</a></p>
+                <p><a  href="/searchcases/pages/toomanyresults.html">Too many results</a></p>
+            </div>
+
+            <div>
+                <h2 class="govuk-heading-s">Social Security and Child Support</h2>
+                <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=staff&">Many results</a></p>  -->
+            </div>
+
+        </div>
+
+
+
+
+        <div style="display: flex; margin-top: 180px;">
 
             <div style="width: 250px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
