--- a/app/views/caseaccess/pages/PA-00467-2017-ar.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ar.html
@@ -132,7 +132,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Add</a></p>
+    <p><a href="#" class="govuk-link">Allocate a role</a></p>
         <h2 class="govuk-heading-m">Caseworkers</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
