--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -125,7 +125,13 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=judiciary&">My access - tab - New case alert - Rejected</a><br></p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=judiciary&">My access - tab - View rejection details</a><br></p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br></p>
-
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=judiciary&">My access - tab - New case alert - Challenged</a><br></p>
+  <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=judiciary&">My access - tab - case details- Challenged</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=judiciary&">My access - tab - Challenged - viewed</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s?usertype=judiciary&">My access - tab - New case alert - Specific</a><br></p>
+    <p><a target="_blank" href="/workallocation/pages/wa-2017?usertype=judiciary&">My access - tab - case details- Specific</a><br></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=judiciary&">My access - tab - Specific - viewed</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=judiciary&">My access - tab - Assorted type - viewed</a><br></p>
       </div>
     </div>
   </div>
