--- a/app/views/workallocation/pages/wa-myaccess-new-c-v.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-c-v.html
@@ -38,7 +38,7 @@ My work
         </li>
         <li class="hmcts-sub-navigation__item">
           <a class="hmcts-sub-navigation__link" aria-current="page" href="#">
-            My access<span class="xui-alert-link__number">1 </span>
+            My access
           </a>
         </li>
       </ul>
@@ -54,20 +54,20 @@ My work
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
           <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Amelia Chu</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Pending</strong></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-2018">Robert Saddlebrook</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
           <td class="govuk-table__cell">
             <!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>-->
           </td>
