--- a/app/views/workallocation/pages/wa-mycases-new.html
+++ b/app/views/workallocation/pages/wa-mycases-new.html
@@ -33,7 +33,7 @@ My work
         </li>
         <li class="hmcts-sub-navigation__item">
           <a class="hmcts-sub-navigation__link" aria-current="page" href="#">
-            My cases
+            My cases<span class="xui-alert-link__number">1 </span>
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
@@ -61,16 +61,18 @@ My work
     </thead>
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-1549">Enndermen Wise</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-1549"><strong>Enndermen Wise</strong></a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
         <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Lead Judge</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY</strong></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> </td>
         <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
-        <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        <td class="govuk-table__cell"><a href="wa-mycases-new-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
       </tr>
+
+
       <tr class="govuk-table__row">
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
