--- a/app/views/workallocation/pages/wa-2017.html
+++ b/app/views/workallocation/pages/wa-2017.html
@@ -11,7 +11,6 @@ Case details
 
 
 {% block content %}
-
 <div class="hmcts-banner">
   <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
     <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
@@ -19,7 +18,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
+    Specific access.<br>You have been granted access until midnight on DD/MM/YYYY. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -27,7 +26,7 @@ Case details
 
 
     <div>
-      <h1 class="govuk-heading-xl">PA/00321/2018</h1>
+      <h1 class="govuk-heading-xl">	PA/00467/2017</h1>
     </div>
 
 
@@ -50,7 +49,7 @@ Case details
       </form>
     </div>
 
-  
+
 
   </div>
 
@@ -196,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   PA/00321/2018
+                   	PA/00467/2017
                  </dd>
 
                </div>
@@ -208,7 +207,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    Robert Saddlebrook
+                    	Amelia Chu
                  </dd>
 
                </div>
@@ -220,7 +219,7 @@ Case details
                    Date of birth
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   05/05/1992
+                   DD/MM/YYYY
                  </dd>
 
                </div>
@@ -232,7 +231,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   Swedish
+                   British
                  </dd>
 
                </div>
