--- a/app/views/workallocation/pages/wa-2018.html
+++ b/app/views/workallocation/pages/wa-2018.html
@@ -11,7 +11,6 @@ Case details
 
 
 {% block content %}
-
 <div class="hmcts-banner">
   <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
     <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
@@ -27,7 +26,7 @@ Case details
 
 
     <div>
-      <h1 class="govuk-heading-xl">PA/00321/2018</h1>
+      <h1 class="govuk-heading-xl">	PA/00321/2018</h1>
     </div>
 
 
@@ -50,7 +49,7 @@ Case details
       </form>
     </div>
 
-  
+
 
   </div>
 
@@ -208,7 +207,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    Robert Saddlebrook
+                    	Robert Saddlebrook
                  </dd>
 
                </div>
@@ -220,7 +219,7 @@ Case details
                    Date of birth
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   05/05/1992
+                   21/01/1998
                  </dd>
 
                </div>
@@ -232,7 +231,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   Swedish
+                   British
                  </dd>
 
                </div>
