--- a/app/views/workallocation/pages/wa-myaccess-new-re.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-re.html
@@ -22,22 +22,22 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" href="#">
             Available tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-mycases">
+          <a class="hmcts-sub-navigation__link" href="#">
             My cases
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-myaccess">
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="#">
             My access<span class="xui-alert-link__number">1 </span>
           </a>
         </li>
