--- a/app/views/caseaccess/layoutstaff-c.html
+++ b/app/views/caseaccess/layoutstaff-c.html
@@ -44,101 +44,114 @@
   {% include "includes/cookie-banner.html" %}
 
 
-  <header class="hmcts-header" role="banner">
-
-      <div style="width:1220px; display: flex; margin: 0 auto;">
-
-          <div style="width: 406px; ">
-              <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage cases</a>
-          </div>
-
-          <div class="hmcts-header__container" style="width: 812px;">
-
-              <div class="hmcts-header__logo">
-                  <a class="hmcts-header__link" href="" aria-current="page"></a>
-              </div>
-
-              <div class="hmcts-header__content">
-                  <nav class="hmcts-header__navigation" aria-label="Account navigation">
-                      <ul class="hmcts-header__navigation-list">
-                          <li class="hmcts-header__navigation-item">
-                              <a class="hmcts-header__navigation-link" href="#">
-                                  Sign out
-                              </a>
-                          </li>
-                      </ul>
-                  </nav>
-              </div>
-
-          </div>
-
-      </div>
 
 
-  </header>
+    <header class="hmcts-header" role="banner">
 
-{% set searchHtml %}
-  <a class="hmcts-search-toggle__button" href="#">Find case</a>
-{% endset %}
+        <div style="width:1220px; display: flex; margin: 0 auto;">
 
+            <div style="width: 406px; ">
+                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage Cases</a>
+            </div>
 
-  <div  style="background-color: #0b0c0c;">
-      <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
+            <div class="hmcts-header__container" style="width: 812px;">
 
-          <div style="width: 0px; ">
+                <div class="hmcts-header__logo">
+                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page"></a>
+                </div>
 
-          </div>
+                <div class="hmcts-header__content">
+                    <nav class="hmcts-header__navigation" aria-label="Account navigation">
+                        <ul class="hmcts-header__navigation-list">
+                            <li class="hmcts-header__navigation-item">
+                                <a class="hmcts-header__navigation-link" href="#">
+                                    Sign out
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
 
-          <div class="hmcts-header__container" style="width:791px;">
-              {{ hmctsPrimaryNavigation({
-              label: 'Primary navigation',
-              items: [{
-              text: 'Case list',
-              href: getUrl('/pages/caselist'),
-              active: pageId == '#'
-              },
-              {
-              text: 'Search cases',
-              href: getUrl('/pages/search-c'),
-              active: pageId == '#'
-              }
-              ]
-              }) }}
-          </div>
+            </div>
 
-
-              <!--
-              <div style="width: 100px;">
-                  <a class="hmcts-search-toggle__button" href="">Find case</a>
-              </div>
-              -->
-
-          <div style="display: flex;flex-direction: row; ">
-              <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
-              <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:219px;">
-              <a href="/caseaccess/pages/PA-00321-2018" role="button" draggable="false" class="govuk-button govuk-button--secondary"
-                 style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
-                  Find
-              </a>
-          </div>
+        </div>
 
 
-      </div>
+    </header>
 
+  {% set searchHtml %}
+    <a class="hmcts-search-toggle__button" href="#">Find case</a>
+  {% endset %}
+
+
+    <div  style="background-color: #0b0c0c;">
+        <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
+
+            <div style="width: 0px; ">
+
+            </div>
+
+            <div>
+                <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 500px;">
+                    <ul class="hmcts-primary-navigation__list">
+                        <li class="hmcts-primary-navigation__item">
+                            <a class="hmcts-primary-navigation__link" href="/caseaccess/pages/mywork">
+                                My work
+                            </a>
+                        </li>
+                        <li class="hmcts-primary-navigation__item">
+                            <a class="hmcts-primary-navigation__link" href="#">
+                                All work
+                            </a>
+                        </li>
+                        <li class="hmcts-primary-navigation__item">
+                            <a class="hmcts-primary-navigation__link" href="/caseaccess/pages/search">
+                                Search cases
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div style="display: flex; flex-grow: 1;">
+            </div>
+
+
+                <!--
+                <div style="width: 100px;">
+                    <a class="hmcts-search-toggle__button" href="">Find case</a>
+                </div>
+                -->
+
+            <div style="display: flex;flex-direction: row; ">
+                <p style="color: white; margin-top:8px; margin-bottom: 0px;">16-digit case reference:  &nbsp;</p>
+                <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:219px;">
+                <a href="/caseaccess/pages/PA-00321-2018" role="button" draggable="false" class="govuk-button govuk-button--secondary"
+                   style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                    Find
+                </a>
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+
+  <div class="govuk-phase-banner govuk-width-container">
+    <p class="govuk-phase-banner__content">
+      <strong class="govuk-tag govuk-phase-banner__content__tag">
+        beta
+      </strong>
+      <span class="govuk-phase-banner__text">
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
+    </p>
   </div>
 
 
 
-<div class="govuk-phase-banner govuk-width-container">
-  <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag govuk-phase-banner__content__tag">
-      beta
-    </strong>
-    <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
-  </p>
-</div>
 
 {% endblock %}
 
